--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
     "dev": "vite",
     "build": "vite build --mode client && vite build",
     "preview": "wrangler pages dev ./dist",
-    "deploy": "$npm_execpath run build && wrangler pages deploy ./dist"
+    "deploy": "$npm_execpath run build && wrangler pages deploy ./dist",
+    "lf": "bunx @biomejs/biome check --apply-unsafe ./ && bunx @biomejs/biome format ./ --write",
+    "check": "tsc --noEmit ./app"
   },
   "private": true,
   "dependencies": {
+    "@hono/vite-ssg": "^0.1.0",
+    "@mdx-js/rollup": "^3.0.1",
+    "@tailwindcss/postcss": "next",
     "hono": "^4.1.2",
-    "honox": "^0.1.9"
+    "honox": "^0.1.9",
+    "remark-frontmatter": "^5.0.0",
+    "remark-mdx-frontmatter": "^4.0.0",
+    "tailwindcss": "next"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240208.0",
     "@hono/vite-cloudflare-pages": "^0.2.4",
-    "vite": "^5.0.12",
+    "vite": "^5.1.6",
     "wrangler": "^3.32.0"
   }
 }
